Fix CSS overflowing to all table element instead of only Transactionlist

--- a/src/app/components/transactions/TransactionList.scss
+++ b/src/app/components/transactions/TransactionList.scss
@@ -1,6 +1,6 @@
 @import "../../../www/styles/variables";
 
-table {
+table.transactionList {
   width: 100%;
   border-collapse: collapse;
   font-size: 0.9em;
